--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,15 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 
 </head>
-
+<!-- <link rel="stylesheet" href="css/style.css"> -->
+<style>
+      /* css reset */
+      body{
+      margin: 0px;
+      padding: 0px;
+      background: url('img/home.jpg');
+      }
+</style>
 <body>
  <div class="login">
 	<h1>Diabetic Analysis</h1>
